--- a/src/App.css
+++ b/src/App.css
@@ -381,7 +381,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
   transition: 0.3s ease-in-out;
   text-align: center;
-  z-index: 0;
+  z-index: 0 !important;
 }
 .project .nav.nav-pills .nav-link::before {
     content: "";
@@ -540,7 +540,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Footer Css ************/
 .footer {
   padding: 0 0 50px 0;
-  background-image: url('../assets/img/footer-bg.png');
+  background-image: url('./assets/img/footer-bg.png');
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
